--- a/ARSpace/Main.storyboard
+++ b/ARSpace/Main.storyboard
@@ -18,24 +18,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hXc-aO-LRo">
-                                <rect key="frame" x="187.5" y="0.0" width="0.0" height="667"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" id="S0s-vD-4nd"/>
-                                    <constraint firstAttribute="width" id="aci-mk-UQO"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="S0s-vD-4nd"/>
-                                        <exclude reference="aci-mk-UQO"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="S0s-vD-4nd"/>
-                                        <include reference="aci-mk-UQO"/>
-                                    </mask>
-                                </variation>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xWw-eM-pn0">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </arscnView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3IW-CH-hkC">
                                 <rect key="frame" x="78" y="490" width="218" height="157"/>
@@ -92,52 +77,41 @@
                             <constraint firstItem="ZVO-nm-eBd" firstAttribute="bottom" secondItem="3IW-CH-hkC" secondAttribute="bottom" constant="20" id="Ezs-LF-NCH"/>
                             <constraint firstItem="3IW-CH-hkC" firstAttribute="top" secondItem="ZVO-nm-eBd" secondAttribute="top" constant="470" id="ix2-zv-GEB"/>
                             <constraint firstItem="ZVO-nm-eBd" firstAttribute="bottom" secondItem="3IW-CH-hkC" secondAttribute="bottom" constant="20" id="ktd-I3-UpM"/>
-                            <constraint firstItem="3IW-CH-hkC" firstAttribute="centerX" secondItem="hXc-aO-LRo" secondAttribute="centerX" id="pxv-8W-HLQ"/>
                             <constraint firstItem="3IW-CH-hkC" firstAttribute="leading" secondItem="ZVO-nm-eBd" secondAttribute="leading" constant="78" id="y9K-Qn-PwT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ZVO-nm-eBd"/>
                         <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="xWw-eM-pn0"/>
+                            </mask>
                             <mask key="constraints">
                                 <exclude reference="Ezs-LF-NCH"/>
                                 <exclude reference="ktd-I3-UpM"/>
                                 <exclude reference="2oI-uy-rWW"/>
                                 <exclude reference="ix2-zv-GEB"/>
-                                <exclude reference="pxv-8W-HLQ"/>
                                 <exclude reference="y9K-Qn-PwT"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="xWw-eM-pn0"/>
+                            </mask>
                             <mask key="constraints">
                                 <include reference="Ezs-LF-NCH"/>
                                 <include reference="ktd-I3-UpM"/>
                                 <include reference="2oI-uy-rWW"/>
                                 <include reference="ix2-zv-GEB"/>
-                                <include reference="pxv-8W-HLQ"/>
                                 <include reference="y9K-Qn-PwT"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
-                        <outlet property="sceneView" destination="hXc-aO-LRo" id="sWD-GA-tWy"/>
+                        <outlet property="sceneView" destination="xWw-eM-pn0" id="gH0-RN-gdJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="88.799999999999997" y="115.59220389805098"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="hcA-0N-H4v">
-            <objects>
-                <viewController id="tO2-0L-ZnG" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="MlU-Yf-DCT">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Lm7-ja-lZZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-602" y="557"/>
         </scene>
     </scenes>
     <resources>
