--- a/ARSpace/Main.storyboard
+++ b/ARSpace/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,9 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xWw-eM-pn0">
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xWw-eM-pn0">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </arscnView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3IW-CH-hkC">
                                 <rect key="frame" x="78" y="490" width="218" height="157"/>
@@ -70,12 +68,30 @@
                                     <constraint firstItem="Krx-3T-FMB" firstAttribute="centerX" secondItem="Cl3-2r-YnT" secondAttribute="centerX" id="ywD-kf-q2h"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cz8-Zv-qgF">
+                                <rect key="frame" x="150" y="296" width="75" height="75"/>
+                                <state key="normal" image="icons8-start_filled"/>
+                                <connections>
+                                    <action selector="btnStart:" destination="BV1-FR-VrT" eventType="touchUpInside" id="Uhb-zV-Fzt"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please scan the enviorment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="APt-ko-9TE">
+                                <rect key="frame" x="82" y="208" width="211" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="APt-ko-9TE" firstAttribute="top" secondItem="ZVO-nm-eBd" secondAttribute="top" constant="188" id="1SR-jg-NC7"/>
                             <constraint firstItem="3IW-CH-hkC" firstAttribute="centerX" secondItem="gPa-qA-TYg" secondAttribute="centerX" id="2oI-uy-rWW"/>
+                            <constraint firstItem="APt-ko-9TE" firstAttribute="centerX" secondItem="xWw-eM-pn0" secondAttribute="centerX" id="EYE-LS-YR3"/>
                             <constraint firstItem="ZVO-nm-eBd" firstAttribute="bottom" secondItem="3IW-CH-hkC" secondAttribute="bottom" constant="20" id="Ezs-LF-NCH"/>
+                            <constraint firstItem="Cz8-Zv-qgF" firstAttribute="centerY" secondItem="gPa-qA-TYg" secondAttribute="centerY" id="RHu-xR-NE7"/>
+                            <constraint firstItem="Cz8-Zv-qgF" firstAttribute="centerX" secondItem="gPa-qA-TYg" secondAttribute="centerX" id="XWZ-ze-nrl"/>
                             <constraint firstItem="3IW-CH-hkC" firstAttribute="top" secondItem="ZVO-nm-eBd" secondAttribute="top" constant="470" id="ix2-zv-GEB"/>
+                            <constraint firstItem="APt-ko-9TE" firstAttribute="centerX" secondItem="Cz8-Zv-qgF" secondAttribute="centerX" id="kIz-80-hzB"/>
                             <constraint firstItem="ZVO-nm-eBd" firstAttribute="bottom" secondItem="3IW-CH-hkC" secondAttribute="bottom" constant="20" id="ktd-I3-UpM"/>
                             <constraint firstItem="3IW-CH-hkC" firstAttribute="leading" secondItem="ZVO-nm-eBd" secondAttribute="leading" constant="78" id="y9K-Qn-PwT"/>
                         </constraints>
@@ -106,6 +122,9 @@
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="ControlView" destination="3IW-CH-hkC" id="zoc-FD-BlI"/>
+                        <outlet property="btnStart" destination="Cz8-Zv-qgF" id="3b5-wV-I9s"/>
+                        <outlet property="lblTextForStart" destination="APt-ko-9TE" id="1nF-fD-eVV"/>
                         <outlet property="sceneView" destination="xWw-eM-pn0" id="gH0-RN-gdJ"/>
                     </connections>
                 </viewController>
@@ -119,5 +138,6 @@
         <image name="icons8-chevron_left" width="75" height="75"/>
         <image name="icons8-chevron_right" width="75" height="75"/>
         <image name="icons8-chevron_up" width="75" height="75"/>
+        <image name="icons8-start_filled" width="75" height="75"/>
     </resources>
 </document>
