updated few files concerning new elements in view

--- a/ARSpace/Main.storyboard
+++ b/ARSpace/Main.storyboard
@@ -68,31 +68,39 @@
                                     <constraint firstItem="Krx-3T-FMB" firstAttribute="centerX" secondItem="Cl3-2r-YnT" secondAttribute="centerX" id="ywD-kf-q2h"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cz8-Zv-qgF">
-                                <rect key="frame" x="150" y="296" width="75" height="75"/>
-                                <state key="normal" image="icons8-start_filled"/>
-                                <connections>
-                                    <action selector="btnStart:" destination="BV1-FR-VrT" eventType="touchUpInside" id="Uhb-zV-Fzt"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please scan the enviorment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="APt-ko-9TE">
-                                <rect key="frame" x="82" y="208" width="211" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qbA-aP-dlK">
+                                <rect key="frame" x="68" y="232" width="240" height="204"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cz8-Zv-qgF">
+                                        <rect key="frame" x="83" y="65" width="75" height="75"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="icons8-start_filled"/>
+                                        <connections>
+                                            <action selector="btnStart:" destination="BV1-FR-VrT" eventType="touchUpInside" id="Uhb-zV-Fzt"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Please scan the enviorment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="APt-ko-9TE">
+                                        <rect key="frame" x="15" y="36" width="211" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="APt-ko-9TE" firstAttribute="top" secondItem="ZVO-nm-eBd" secondAttribute="top" constant="188" id="1SR-jg-NC7"/>
+                            <constraint firstItem="qbA-aP-dlK" firstAttribute="top" secondItem="ZVO-nm-eBd" secondAttribute="top" constant="212" id="1Ke-Kr-g0T"/>
                             <constraint firstItem="3IW-CH-hkC" firstAttribute="centerX" secondItem="gPa-qA-TYg" secondAttribute="centerX" id="2oI-uy-rWW"/>
-                            <constraint firstItem="APt-ko-9TE" firstAttribute="centerX" secondItem="xWw-eM-pn0" secondAttribute="centerX" id="EYE-LS-YR3"/>
+                            <constraint firstItem="qbA-aP-dlK" firstAttribute="centerY" secondItem="gPa-qA-TYg" secondAttribute="centerY" id="8OP-cp-VBA"/>
                             <constraint firstItem="ZVO-nm-eBd" firstAttribute="bottom" secondItem="3IW-CH-hkC" secondAttribute="bottom" constant="20" id="Ezs-LF-NCH"/>
-                            <constraint firstItem="Cz8-Zv-qgF" firstAttribute="centerY" secondItem="gPa-qA-TYg" secondAttribute="centerY" id="RHu-xR-NE7"/>
-                            <constraint firstItem="Cz8-Zv-qgF" firstAttribute="centerX" secondItem="gPa-qA-TYg" secondAttribute="centerX" id="XWZ-ze-nrl"/>
+                            <constraint firstItem="qbA-aP-dlK" firstAttribute="centerX" secondItem="xWw-eM-pn0" secondAttribute="centerX" id="Ioh-3h-gt5"/>
+                            <constraint firstItem="qbA-aP-dlK" firstAttribute="leading" secondItem="ZVO-nm-eBd" secondAttribute="leading" constant="68" id="VMd-TE-Ym8"/>
+                            <constraint firstItem="qbA-aP-dlK" firstAttribute="centerX" secondItem="gPa-qA-TYg" secondAttribute="centerX" id="W2c-Lo-Txa"/>
                             <constraint firstItem="3IW-CH-hkC" firstAttribute="top" secondItem="ZVO-nm-eBd" secondAttribute="top" constant="470" id="ix2-zv-GEB"/>
-                            <constraint firstItem="APt-ko-9TE" firstAttribute="centerX" secondItem="Cz8-Zv-qgF" secondAttribute="centerX" id="kIz-80-hzB"/>
                             <constraint firstItem="ZVO-nm-eBd" firstAttribute="bottom" secondItem="3IW-CH-hkC" secondAttribute="bottom" constant="20" id="ktd-I3-UpM"/>
+                            <constraint firstItem="qbA-aP-dlK" firstAttribute="centerY" secondItem="xWw-eM-pn0" secondAttribute="centerY" id="uRj-xu-byh"/>
                             <constraint firstItem="3IW-CH-hkC" firstAttribute="leading" secondItem="ZVO-nm-eBd" secondAttribute="leading" constant="78" id="y9K-Qn-PwT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ZVO-nm-eBd"/>
@@ -125,7 +133,7 @@
                         <outlet property="ControlView" destination="3IW-CH-hkC" id="zoc-FD-BlI"/>
                         <outlet property="btnStart" destination="Cz8-Zv-qgF" id="3b5-wV-I9s"/>
                         <outlet property="lblTextForStart" destination="APt-ko-9TE" id="1nF-fD-eVV"/>
-                        <outlet property="sceneView" destination="xWw-eM-pn0" id="gH0-RN-gdJ"/>
+                        <outlet property="sceneView" destination="xWw-eM-pn0" id="BqI-v5-OkW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
