--- a/ARSpace/Main.storyboard
+++ b/ARSpace/Main.storyboard
@@ -17,8 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xWw-eM-pn0">
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RXZ-wc-odS">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </arscnView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3IW-CH-hkC">
                                 <rect key="frame" x="78" y="490" width="218" height="157"/>
@@ -95,19 +96,14 @@
                             <constraint firstItem="3IW-CH-hkC" firstAttribute="centerX" secondItem="gPa-qA-TYg" secondAttribute="centerX" id="2oI-uy-rWW"/>
                             <constraint firstItem="qbA-aP-dlK" firstAttribute="centerY" secondItem="gPa-qA-TYg" secondAttribute="centerY" id="8OP-cp-VBA"/>
                             <constraint firstItem="ZVO-nm-eBd" firstAttribute="bottom" secondItem="3IW-CH-hkC" secondAttribute="bottom" constant="20" id="Ezs-LF-NCH"/>
-                            <constraint firstItem="qbA-aP-dlK" firstAttribute="centerX" secondItem="xWw-eM-pn0" secondAttribute="centerX" id="Ioh-3h-gt5"/>
                             <constraint firstItem="qbA-aP-dlK" firstAttribute="leading" secondItem="ZVO-nm-eBd" secondAttribute="leading" constant="68" id="VMd-TE-Ym8"/>
                             <constraint firstItem="qbA-aP-dlK" firstAttribute="centerX" secondItem="gPa-qA-TYg" secondAttribute="centerX" id="W2c-Lo-Txa"/>
                             <constraint firstItem="3IW-CH-hkC" firstAttribute="top" secondItem="ZVO-nm-eBd" secondAttribute="top" constant="470" id="ix2-zv-GEB"/>
                             <constraint firstItem="ZVO-nm-eBd" firstAttribute="bottom" secondItem="3IW-CH-hkC" secondAttribute="bottom" constant="20" id="ktd-I3-UpM"/>
-                            <constraint firstItem="qbA-aP-dlK" firstAttribute="centerY" secondItem="xWw-eM-pn0" secondAttribute="centerY" id="uRj-xu-byh"/>
                             <constraint firstItem="3IW-CH-hkC" firstAttribute="leading" secondItem="ZVO-nm-eBd" secondAttribute="leading" constant="78" id="y9K-Qn-PwT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ZVO-nm-eBd"/>
                         <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="xWw-eM-pn0"/>
-                            </mask>
                             <mask key="constraints">
                                 <exclude reference="Ezs-LF-NCH"/>
                                 <exclude reference="ktd-I3-UpM"/>
@@ -117,9 +113,6 @@
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
-                            <mask key="subviews">
-                                <include reference="xWw-eM-pn0"/>
-                            </mask>
                             <mask key="constraints">
                                 <include reference="Ezs-LF-NCH"/>
                                 <include reference="ktd-I3-UpM"/>
@@ -130,10 +123,9 @@
                         </variation>
                     </view>
                     <connections>
-                        <outlet property="ControlView" destination="3IW-CH-hkC" id="zoc-FD-BlI"/>
                         <outlet property="btnStart" destination="Cz8-Zv-qgF" id="3b5-wV-I9s"/>
                         <outlet property="lblTextForStart" destination="APt-ko-9TE" id="1nF-fD-eVV"/>
-                        <outlet property="sceneView" destination="xWw-eM-pn0" id="BqI-v5-OkW"/>
+                        <outlet property="sceneView" destination="RXZ-wc-odS" id="VIP-ci-dFv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
