--- a/ARSpace/Main.storyboard
+++ b/ARSpace/Main.storyboard
@@ -95,6 +95,14 @@
                                     <constraint firstItem="APt-ko-9TE" firstAttribute="trailing" secondItem="qbA-aP-dlK" secondAttribute="trailingMargin" id="rk2-Ct-kfw"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gXJ-cs-4x1">
+                                <rect key="frame" x="164" y="87" width="46" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="testButton:" destination="BV1-FR-VrT" eventType="touchUpInside" id="Fyj-zd-sc7"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
