--- a/ARSpace/Main.storyboard
+++ b/ARSpace/Main.storyboard
@@ -23,59 +23,77 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </arscnView>
-                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3IW-CH-hkC">
-                                <rect key="frame" x="78" y="490" width="218" height="157"/>
+                            <view hidden="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3IW-CH-hkC">
+                                <rect key="frame" x="16" y="490" width="343" height="157"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cl3-2r-YnT">
-                                        <rect key="frame" x="72" y="90" width="75" height="75"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cl3-2r-YnT">
+                                        <rect key="frame" x="134" y="90" width="75" height="75"/>
                                         <state key="normal" image="icons8-chevron_down"/>
                                         <connections>
                                             <action selector="btnDown:" destination="BV1-FR-VrT" eventType="touchUpInside" id="6B8-Qu-BUU"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="odc-gB-qrX">
-                                        <rect key="frame" x="120" y="42" width="75" height="75"/>
+                                        <rect key="frame" x="182" y="42" width="75" height="75"/>
                                         <state key="normal" image="icons8-chevron_right"/>
                                         <connections>
                                             <action selector="btnRight:" destination="BV1-FR-VrT" eventType="touchUpInside" id="CZf-n1-i4P"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="knJ-wh-TGW">
-                                        <rect key="frame" x="24" y="42" width="73" height="75"/>
+                                        <rect key="frame" x="86" y="42" width="73" height="75"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="73" id="e4G-89-xqc"/>
+                                            <constraint firstAttribute="width" constant="73" id="ebj-aC-ieg"/>
                                         </constraints>
                                         <state key="normal" image="icons8-chevron_left"/>
                                         <connections>
                                             <action selector="btnLeft:" destination="BV1-FR-VrT" eventType="touchUpInside" id="fZM-LW-jVU"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Krx-3T-FMB">
-                                        <rect key="frame" x="74" y="-7" width="71" height="75"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Krx-3T-FMB">
+                                        <rect key="frame" x="136" y="-7" width="71" height="75"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="71" id="fMI-en-7NX"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="18"/>
                                         <state key="normal" image="icons8-chevron_up"/>
                                         <connections>
                                             <action selector="btnUp:" destination="BV1-FR-VrT" eventType="touchUpInside" id="9f7-ym-jxa"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WjD-fj-k1Y">
+                                        <rect key="frame" x="18" y="41" width="75" height="75"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="icons8-chevron"/>
+                                        <connections>
+                                            <action selector="btnCntrlForwardPressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="ree-gD-Hjc"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="y57-3q-fZx">
+                                        <rect key="frame" x="251" y="41" width="75" height="75"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="icons8-chevron_hashtag"/>
+                                        <connections>
+                                            <action selector="btnCntrlBackwardPressed:" destination="BV1-FR-VrT" eventType="touchUpInside" id="xrk-1P-BJa"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Krx-3T-FMB" firstAttribute="leading" secondItem="3IW-CH-hkC" secondAttribute="leading" constant="74" id="1o6-PX-7nI"/>
-                                    <constraint firstItem="knJ-wh-TGW" firstAttribute="top" secondItem="odc-gB-qrX" secondAttribute="top" id="5mZ-Gw-CDm"/>
-                                    <constraint firstItem="knJ-wh-TGW" firstAttribute="top" secondItem="3IW-CH-hkC" secondAttribute="top" constant="42" id="JaK-zh-hYv"/>
-                                    <constraint firstItem="knJ-wh-TGW" firstAttribute="leading" secondItem="3IW-CH-hkC" secondAttribute="leading" constant="24" id="Q2p-jJ-ZsB"/>
-                                    <constraint firstItem="Cl3-2r-YnT" firstAttribute="top" secondItem="Krx-3T-FMB" secondAttribute="bottom" constant="22" id="R8Q-SY-tam"/>
-                                    <constraint firstItem="Krx-3T-FMB" firstAttribute="centerX" secondItem="3IW-CH-hkC" secondAttribute="centerX" id="URR-Ft-qUE"/>
-                                    <constraint firstItem="Krx-3T-FMB" firstAttribute="top" secondItem="3IW-CH-hkC" secondAttribute="top" constant="-7" id="XaQ-5r-5vM"/>
-                                    <constraint firstItem="odc-gB-qrX" firstAttribute="leading" secondItem="knJ-wh-TGW" secondAttribute="trailing" constant="23" id="tEQ-Dm-CDq"/>
-                                    <constraint firstItem="Krx-3T-FMB" firstAttribute="centerX" secondItem="Cl3-2r-YnT" secondAttribute="centerX" id="ywD-kf-q2h"/>
+                                    <constraint firstItem="knJ-wh-TGW" firstAttribute="leading" secondItem="3IW-CH-hkC" secondAttribute="leading" constant="86" id="1hh-6W-dfh"/>
+                                    <constraint firstItem="Cl3-2r-YnT" firstAttribute="top" secondItem="Krx-3T-FMB" secondAttribute="bottom" constant="22" id="CIG-TE-6lh"/>
+                                    <constraint firstItem="knJ-wh-TGW" firstAttribute="top" secondItem="3IW-CH-hkC" secondAttribute="top" constant="42" id="NVz-Gd-paB"/>
+                                    <constraint firstItem="Krx-3T-FMB" firstAttribute="centerX" secondItem="Cl3-2r-YnT" secondAttribute="centerX" id="dIS-qU-xag"/>
+                                    <constraint firstItem="Krx-3T-FMB" firstAttribute="top" secondItem="3IW-CH-hkC" secondAttribute="top" constant="-7" id="fDQ-0d-zJE"/>
+                                    <constraint firstItem="Krx-3T-FMB" firstAttribute="centerX" secondItem="3IW-CH-hkC" secondAttribute="centerX" id="gjx-On-QVM"/>
+                                    <constraint firstItem="knJ-wh-TGW" firstAttribute="top" secondItem="odc-gB-qrX" secondAttribute="top" id="nrn-aJ-6bZ"/>
+                                    <constraint firstItem="odc-gB-qrX" firstAttribute="leading" secondItem="knJ-wh-TGW" secondAttribute="trailing" constant="23" id="sWj-3b-Cco"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qbA-aP-dlK">
                                 <rect key="frame" x="68" y="232" width="239" height="203"/>
                                 <subviews>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cz8-Zv-qgF">
-                                        <rect key="frame" x="82.5" y="65" width="75" height="75"/>
+                                        <rect key="frame" x="82" y="65" width="75" height="75"/>
                                         <state key="normal" image="icons8-start_filled"/>
                                         <connections>
                                             <action selector="btnStart:" destination="BV1-FR-VrT" eventType="touchUpInside" id="Uhb-zV-Fzt"/>
@@ -154,7 +172,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="icons8-chevron" width="75" height="75"/>
         <image name="icons8-chevron_down" width="75" height="75"/>
+        <image name="icons8-chevron_hashtag" width="75" height="75"/>
         <image name="icons8-chevron_left" width="75" height="75"/>
         <image name="icons8-chevron_right" width="75" height="75"/>
         <image name="icons8-chevron_up" width="75" height="75"/>
